# haskellBook

./: .gitignore  README.md  exercises.txt  question.txt  stack.yaml
work/: .gitignore  package.yaml
work/src/ch10/: databaseProcessing.hs  inText.hs  rewritingUsingFolds.hs  warmUpAndReview.hs
work/src/ch11/: asPatterns.hs  binaryTree.hs  inText.hs  inText3.hs  inText4.hs  languageExercises.hs  tooMany.hs  vigenere.hs
work/src/ch12/: binaryTree.hs  eqCaseGuard.hs  person.hs
work/src/ch13/: Cipher.hs  chEx4.hs  palindrome.hs  stack.yaml
work/src/ch13/hangman/: LICENSE  hangman.cabal
work/src/ch13/hangman/exe/: Main.hs
work/src/ch15/: MaybeAnotherMonoid.hs  MonoidEx.hs  SemigourpEx.hs  qcPatience.hs
work/src/ch16/: ChapterExercises.hs  Constant.hs  FlipFunctor.hs  IoFunctor.hs  ReplaceExperiment.hs  ignoringPossibilities.hs  inText3.hs  inText4.hs  inText6.hs
work/src/ch17/: Apl1.hs  BadMonoid.hs  EitherAndValidation.hs  Errors.hs  ExCombinations.hs  ExIdentity.hs  ListApplicative.hs  ListZipListApplicative.hs  ZipList.hs  lookup.hs
work/src/ch18/: Bind.hs  EitherMonad.hs  ExFunctions.hs  ExInstances.hs  MonadicComposition.hs
work/src/ch19/: Uuid.hs
work/src/ch2/: learn.hs
work/src/ch21/: ChapterExercises.hs  HttpStuff.hs  TediousCode.hs  composeMemo.txt
work/src/ch22/: Ask.hs  DemoApplicative.hs  InText.hs  InTextReaderMonad.hs  ReaderMonad.hs  ReaderPractice.hs  ReadingComprehension.hs  WarmingUp.hs  typeMemo.txt
work/src/ch23/: ChapterExercises.hs  FizzBuzz.hs  FizzBuzzFromTo.hs  InText.hs  (+5 more)
work/work/: ChangeLog.md  LICENSE  package.yaml
(+83 files in other folders)
