name:                hangman
version:             0.1.0.0
synopsis:            Playing Handman
description:         This is sample program in HaskellBook ch13
homepage:            https://github.com/motoyak/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Motohiro Yakura
maintainer:          motohiro686@gmail.com
copyright:           2019 Motohiro Yakura
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

executable hangman
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    , random
                    , split
                    , QuickCheck
